# fastapi-proj-boilerplate

./: .gitignore  Dockerfile  README.md  main.py  makefile  pyproject.toml  skaffold.yaml
app/: injector.py  main.py
app/api/routes/: root.py  users.py
app/domain/: repositories.py  services.py
app/domain/models/: user.py
app/domain/repositories/: user_repo_impl.py
app/domain/services/: user_service.py  user_service_impl.py
app/domain/user/: models.py  repository.py
app/infra/: repositories.py  services.py
app/infra/persistence/user/: repo.py
app/routes/: users.py
app/services/: user_svc.py
app/utils/: di.py  log.py
deploy/k8s/: deployment.yaml  ingress.yaml  service.yaml
