[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Jerry Chen <jerrychen@17.media>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
